// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`middlewares/responseFormatter failed responses sets error.data property correctly when the request failed with HTTP response but without Put.io API signature 1`] = `
Object {
  "error_message": "MOCK_MESSAGE",
  "error_type": "ERROR",
  "status_code": 502,
}
`;

exports[`middlewares/responseFormatter failed responses sets error.data property correctly when the request failed with Put.io API signature 1`] = `
Object {
  "error_message": "Putio API Error",
  "error_type": "API_ERROR",
  "status_code": 400,
}
`;

exports[`middlewares/responseFormatter failed responses sets error.data property correctly when the request failed without Put.io API signature 1`] = `
Object {
  "error_message": "MOCK_MESSAGE",
  "error_type": "ERROR",
  "status_code": 0,
}
`;

exports[`middlewares/responseFormatter successful responses transforms as expected 1`] = `
Object {
  "body": Object {
    "foo": "bar",
  },
  "config": Object {},
  "data": Object {
    "foo": "bar",
  },
  "headers": Object {},
  "status": 200,
  "statusText": "ok",
}
`;
